# agentkv

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
agentkv/: __init__.py  hf_cache.py  pool.py
agentkv/core/: __init__.py  config.py  radix_tree.py  reclamation.py  slab_allocator.py  triton_kernels.py
agentkv/python/: __init__.py
bench/: branching_benchmark.py  deepseek_stress_test.py  hf_cache_demo.py  hf_model_demo.py  microbench_alloc.py
docs/: BENCHMARKS.md  architecture.md
integrations/sglang/: README.md  __init__.py
integrations/vllm/: README.md  __init__.py  block_manager.py
tests/: conftest.py  test_api.py  test_hf_cache.py  test_radix_tree.py  test_slab_allocator.py  test_stress.py
